terraform/modules/vpc/main.tf
# VPC
resource "aws_vpc" "this" {
    cidr_block = var.cidr
    enable_dns_support = true
    enable_dns_hostnames = true

    tags = merge(var.tags, {
        Name = var.name
    })
}

# Internet Gateway
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id

    tags = merge(var.tags, {
        Name = "${var.name}-igw"
    })

}

# Public Subnets
resource "aws_subnet" "public" {
  count = length(var.public_subnet)

  vpc_id = aws_vpc.this.id
  cidr_block = var.public_subnet[count.index]
  availability_zone = var.azs[count.index]
  map_public_ip_on_launch = true

  tags = merge(var.tags, {
    Name = "${var.name}-public-${count.index}"
  })
}

# Private Subnets
resource "aws_subnet" "private" {
  count = length(var.private_subnet)

  vpc_id = aws_vpc.this.id
  cidr_block = var.private_subnet[count.index]
  availability_zone = var.azs[count.index]

  tags = merge(var.tags, {
    Name = "${var.name}-private-${count.index}"
  })
}

# Elastic IP for NAT
resource "aws_eip" "nat" {
  count = var.enable_ng ? 1 : 0
  domain = "vpc"
}

# NAT Gateway
resource "aws_nat_gateway" "this" {
  count = var.enable_ng ? 1 : 0

  allocation_id = aws_eip.nat[0].id
  subnet_id = aws_subnet.public[0].id

  tags = merge(var.tags, {
    Name = "${var.name}-nat"
  })
}

# Public Route Tables
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.this.id

  tags = merge(var.tags, {
    Name = "${var.name}-public-rt"
  })  
}

resource "aws_route" "public_internet_access" {
  route_table_id = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.this.id
}

resource "aws_route_table_association" "public" {
  count = length(aws_subnet.public)

  subnet_id = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id

}

# Private Route Tables
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.this.id

  tags = merge(var.name, {
    Name = "${var.name}-private-rt"
  })
}

resource "aws_route" "private_nat_access" {
  count = var.enable_ng ? 1 : 0

  route_table_id = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id = aws_nat_gateway.this[0].id
}

resource "aws_route_table_association" "private" {
  count = length(aws_subnet.private)

  subnet_id = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}
